# maplibre-native-qt-test

./: .gitattributes  .gitignore  CMakeLists.txt  Main.qml  MapContainer-Distribution.md  OFFLINE_MAP_DEMO_GUIDE.md  annotationmanager.cpp  annotationmanager.h  build_android.sh  build_linux.sh  cameraanimationmath.h  controlpanelwidget.cpp  controlpanelwidget.h  geojsonbuilder.cpp  geojsonbuilder.h  geojsonexporter.cpp  geojsonexporter.h  geojsonimporter.cpp  geojsonimporter.h  hxgisserver.cpp  hxgisserver.h  locationindicatormanager.cpp  locationindicatormanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mapannotation.h  mapcontainer.cpp  mapcontainer.h  mappolygon.h  maproutesegment.h  polygongeojsonbuilder.cpp  polygongeojsonbuilder.h  polygonmanager.cpp  polygonmanager.h  routegeojsonbuilder.cpp  routegeojsonbuilder.h  routemanager.cpp  routemanager.h  scalebarwidget.cpp  (+9 more)
android/: AndroidManifest.xml
android/assets/models/fr_FR-siwis-low/: fr_FR-siwis-low.onnx
android/res/values/: libs.xml  strings.xml
data/: style.json
lib-plugin-HXGISServer/plugin-HXGISServer-android/: VERSION
lib-plugin-HXGISServer/plugin-HXGISServer-android/demo/: demo.cpp
lib-plugin-HXGISServer/plugin-HXGISServer-linux/: VERSION  plugin-HXGISServer.h
lib-plugin-HXGISServer/plugin-HXGISServer-linux/demo/: demo.cpp
lib-plugin-HXGISServer/plugin-HXGISServer-linux/doc/: http-routes.md
lib-plugin-HXGISServer/plugin-HXGISServer-linux/docs/: http-routes.md
map_data/styles/day/: style.json
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/arm64-v8a/include/QMapLibre/: FilterParameter
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/arm64-v8a/include/QMapLibreWidgets/: Export  GLWidget
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/arm64-v8a/lib/cmake/QMapLibre/: QMapLibreConfig.cmake  QMapLibreCoreTargets-relwithdebinfo.cmake  QMapLibreCoreTargets.cmake  QMapLibreLocationPluginGeoServicesTargets-relwithdebinfo.cmake  QMapLibreLocationPluginQmlTargets-relwithdebinfo.cmake  QMapLibreLocationTargets-relwithdebinfo.cmake  QMapLibreLocationTargets.cmake  QMapLibreWidgetsTargets-relwithdebinfo.cmake
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/armeabi-v7a/include/QMapLibreWidgets/: QMapLibreWidgets
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/armeabi-v7a/lib/cmake/QMapLibre/: QMapLibreCoreTargets-relwithdebinfo.cmake  QMapLibreLocationPluginGeoServicesTargets-relwithdebinfo.cmake  QMapLibreLocationPluginQmlTargets-relwithdebinfo.cmake  QMapLibreLocationPluginQmlTargets.cmake  QMapLibreLocationTargets-relwithdebinfo.cmake  QMapLibreWidgetsTargets-relwithdebinfo.cmake
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/x86/lib/cmake/QMapLibre/: QMapLibreCoreTargets-relwithdebinfo.cmake  QMapLibreLocationPluginGeoServicesTargets-relwithdebinfo.cmake  QMapLibreLocationPluginGeoServicesTargets.cmake  QMapLibreLocationPluginQmlTargets-relwithdebinfo.cmake  QMapLibreLocationTargets-relwithdebinfo.cmake  QMapLibreWidgetsTargets-relwithdebinfo.cmake
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/x86_64/include/QMapLibre/: ImageParameter
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/x86_64/lib/cmake/QMapLibre/: QMapLibreCoreTargets-relwithdebinfo.cmake  QMapLibreLocationPluginGeoServicesTargets-relwithdebinfo.cmake  QMapLibreLocationPluginQmlTargets-relwithdebinfo.cmake  QMapLibreLocationTargets-relwithdebinfo.cmake  QMapLibreWidgetsTargets-relwithdebinfo.cmake  QMapLibreWidgetsTargets.cmake
maplibre-native-qt_v3.0.0_Qt6.6.3_Android/x86_64/qml/MapLibre/: declarative_locationplugin_maplibre.qmltypes
maplibre-native-qt_v3.0.0_Qt6.6.3_Linux/lib64/: libQMapLibre.so.3.0.0  libQMapLibreLocation.so.3  libQMapLibreLocation.so.3.0.0  libQMapLibreWidgets.so.3  libQMapLibreWidgets.so.3.0.0
maplibre-native-qt_v3.0.0_Qt6.6.3_Linux/lib64/cmake/QMapLibre/: QMapLibreCoreTargets-release.cmake  QMapLibreCoreTargets.cmake  QMapLibreLocationPluginGeoServicesTargets-release.cmake  QMapLibreLocationPluginGeoServicesTargets.cmake  QMapLibreLocationPluginQmlTargets-release.cmake  QMapLibreLocationPluginQmlTargets.cmake  QMapLibreLocationTargets-release.cmake  QMapLibreLocationTargets.cmake  QMapLibreWidgetsTargets-release.cmake  QMapLibreWidgetsTargets.cmake
maplibre-native-qt_v3.0.0_Qt6.6.3_Linux/qml/MapLibre/: qmldir
tests/: CMakeLists.txt  tst_annotation_screenshot.cpp  tst_annotationmanager.cpp  tst_cameraanimation.cpp  tst_coordinateconversion.cpp  tst_geojsonbuilder.cpp  tst_geojsonexporter.cpp  tst_geojsonimporter.cpp  tst_geojsonroundtrip.cpp  tst_gui.cpp  tst_locationindicatormanager.cpp  tst_mapannotation.cpp  tst_mappolygon.cpp  tst_maproutesegment.cpp  tst_placeholder.cpp  tst_polygongeojsonbuilder.cpp  tst_polygonmanager.cpp  tst_routegeojsonbuilder.cpp  tst_routemanager.cpp
ttsplayer-1.0.0/: README.md  demo_french.sh
ttsplayer-1.0.0/demo/: main.cpp
ttsplayer-1.0.0/include/ttsplayer/: TTSPlayer.h  ttsplayer_global.h
ttsplayer-1.0.0/linux_x86_64/: ttsplayer_demo
